GC Dental/src/objects/Campaign_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Campaign Line Items</relationshipLabel>
        <relationshipName>Campaign_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Product__c</fullName>
        <label>Name of the Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT( Product__r.Product_Family__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <label>Product Price</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Campaign Line Items</relationshipLabel>
        <relationshipName>Campaign_Line_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_in__c</fullName>
        <label>Quantity in</label>
        <picklist>
            <picklistValues>
                <fullName>Box</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueNo__c</fullName>
        <label>UniqueNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Line Item</label>
    <nameField>
        <label>Campaign Line Item	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>